Bug 1747475 [Linux] Don't assert/crash if we're missing mGdkWindow r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D137554